--- a/website/index.html
+++ b/website/index.html
@@ -5,6 +5,11 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>my website</title>
+		<meta name="description" content="This is description" />
+		<link rel="stylesheet" href="style.css" />
 	</head>
-	<body></body>
+	<body>
+		<h1>test</h1>
+		<h2>test</h2>
+	</body>
 </html>
